[package]
name = "cscs-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
directories = "6.0.0"
dirs = "6.0.0"
duration-str = "0.17.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
